--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', post: Post.new %>
+<%= form_for @post do |f| %>
+    <%= f.label "Title" %>
+    <%= f.text_field :title %>
+    <%= f.label "Content" %>
+    <%= f.text_area :content %>
+    <h2>Choose Category</h2>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+    <h2>Or Create Category</h2>
+    <%= f.fields_for :categories, @post.categories.build do |c| %> 
+        <%=c.label :name %>
+        <%=c.text_field :name %>
+      <% end %>
+    <%= f.submit %>
+  <% end %> 
+
